--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.8.0",
     "@tailwindcss/forms": "^0.5.10",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "@types/react-dom": "19.0.3",
     "autoprefixer": "10.4.20",
     "postcss": "8.5.1",
+    "prisma": "^6.8.0",
     "tailwindcss": "3.4.17"
   }
 }
