--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "sharp": "^0.34.1",
     "sonner": "^2.0.3",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
